--- a/css/admin.bootstrap.css
+++ b/css/admin.bootstrap.css
@@ -5,7 +5,7 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 :root {
-  --blue: #6777EF;
+  --blue: var(--primary);
   --indigo: #6610f2;
   --purple: #6f42c1;
   --pink: #e83e8c;
@@ -18,7 +18,8 @@
   --white: #fff;
   --gray: #757575;
   --gray-dark: #5a5c69;
-  --primary: #6777EF;
+  --primary: #4fabb8;
+  --primary-variant: #3a838d;
   --secondary: #757575;
   --success: #66bb6a;
   --info: #3abaf4;
@@ -169,13 +170,13 @@ sup {
 }
 
 a {
-  color: #6777EF;
+  color: var(--primary);
   text-decoration: none;
   background-color: transparent;
 }
 
 a:hover {
-  color: #224abe;
+  color: var(--primary-variant);
   text-decoration: underline;
 }
 
@@ -2926,8 +2927,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #6777EF;
-  border-color: #6777EF;
+  background-color: var(--primary);
+  border-color: var(--primary);
   -webkit-box-shadow: 0 0.125rem 0.25rem 0 rgba(58, 59, 69, 0.2) !important;
   box-shadow: 0 0.125rem 0.25rem 0 rgba(58, 59, 69, 0.2) !important;
   border-radius: 0.25rem;
@@ -2935,8 +2936,8 @@ fieldset:disabled a.btn {
 
 .btn-primary:hover {
   color: #fff;
-  background-color: #394EEA;
-  border-color: #394EEA;
+  background-color: var(--primary-variant);
+  border-color: var(--primary-variant);
 }
 
 .btn-primary:focus,
@@ -2948,16 +2949,16 @@ fieldset:disabled a.btn {
 .btn-primary.disabled,
 .btn-primary:disabled {
   color: #fff;
-  background-color: #6777EF;
-  border-color: #6777EF;
+  background-color: var(--primary);
+  border-color: var(--primary);
 }
 
 .btn-primary:not(:disabled):not(.disabled):active,
 .btn-primary:not(:disabled):not(.disabled).active,
 .show>.btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #394EEA;
-  border-color: #394EEA;
+  background-color: var(--primary-variant);
+  border-color: var(--primary-variant);
 }
 
 .btn-primary:not(:disabled):not(.disabled):active:focus,
@@ -3269,8 +3270,8 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #6777EF;
-  border-color: #6777EF;
+  color: var(--primary);
+  border-color: var(--primary);
   -webkit-box-shadow: 0 0.125rem 0.25rem 0 rgba(58, 59, 69, 0.2) !important;
   box-shadow: 0 0.125rem 0.25rem 0 rgba(58, 59, 69, 0.2) !important;
   border-radius: 0.25rem;
@@ -3278,8 +3279,8 @@ fieldset:disabled a.btn {
 
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #6777EF;
-  border-color: #6777EF;
+  background-color: var(--primary);
+  border-color: var(--primary);
 }
 
 .btn-outline-primary:focus,
@@ -3290,7 +3291,7 @@ fieldset:disabled a.btn {
 
 .btn-outline-primary.disabled,
 .btn-outline-primary:disabled {
-  color: #6777EF;
+  color: var(--primary);
   background-color: transparent;
 }
 
@@ -3298,8 +3299,8 @@ fieldset:disabled a.btn {
 .btn-outline-primary:not(:disabled):not(.disabled).active,
 .show>.btn-outline-primary.dropdown-toggle {
   color: #fff;
-  background-color: #6777EF;
-  border-color: #6777EF;
+  background-color: var(--primary);
+  border-color: var(--primary);
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus,
@@ -3603,7 +3604,7 @@ fieldset:disabled a.btn {
 }
 
 .btn-link:hover {
-  color: #224abe;
+  color: var(--primary-variant);
   text-decoration: underline;
 }
 
@@ -3917,7 +3918,7 @@ input[type="button"].btn-block {
 .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #6777EF;
+  background-color: var(--primary);
 }
 
 .dropdown-item.disabled,
@@ -4310,8 +4311,8 @@ input[type="button"].btn-block {
 
 .custom-control-input:checked~.custom-control-label::before {
   color: #fff;
-  border-color: #6777EF;
-  background-color: #6777EF;
+  border-color: var(--primary);
+  background-color: var(--primary);
 }
 
 .custom-control-input:focus~.custom-control-label::before {
@@ -4376,8 +4377,8 @@ input[type="button"].btn-block {
 }
 
 .custom-checkbox .custom-control-input:indeterminate~.custom-control-label::before {
-  border-color: #6777EF;
-  background-color: #6777EF;
+  border-color: var(--primary);
+  background-color: var(--primary);
 }
 
 .custom-checkbox .custom-control-input:indeterminate~.custom-control-label::after {
@@ -4539,8 +4540,8 @@ input[type="button"].btn-block {
 .custom-file-input:lang(en)~.custom-file-label::after {
   content: "Browse";
   color: #fff;
-  background-color: #6777EF;
-  border-color: #6777EF;
+  background-color: var(--primary);
+  border-color: var(--primary);
 }
 
 .custom-file-input~.custom-file-label[data-browse]::after {
@@ -4617,7 +4618,7 @@ input[type="button"].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #6777EF;
+  background-color: var(--primary);
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -4652,7 +4653,7 @@ input[type="button"].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #6777EF;
+  background-color: var(--primary);
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -4690,7 +4691,7 @@ input[type="button"].btn-block {
   margin-top: 0;
   margin-right: 0.2rem;
   margin-left: 0.2rem;
-  background-color: #6777EF;
+  background-color: var(--primary);
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -4825,7 +4826,7 @@ input[type="button"].btn-block {
 
 .nav-tabs .nav-link.active,
 .nav-tabs .nav-item.show .nav-link {
-  color: #6e707e;
+  color: #7e786e;
   background-color: #fff;
   border-color: #dddfeb #dddfeb #fff;
 }
@@ -4843,7 +4844,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show>.nav-link {
   color: #fff;
-  background-color: #6777EF;
+  background-color: var(--primary);
 }
 
 .nav-fill .nav-item {
@@ -5415,7 +5416,12 @@ input[type="button"].btn-block {
   padding: 0.75rem 1.25rem;
   margin-bottom: 0;
   background-color: #FFFFFF;
+}
 
+.card-content {
+  padding: 0.75rem 1.25rem;
+  margin-top: -0.75rem;
+  background-color: #FFFFFF;
 }
 
 .card-header:first-child {
@@ -5680,7 +5686,7 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #6777EF;
+  color: var(--primary);
   background-color: #fff;
   border: 1px solid #dddfeb;
   -webkit-box-shadow: 0 0.125rem 0.25rem 0 rgba(58, 59, 69, 0.2) !important;
@@ -5689,10 +5695,10 @@ input[type="button"].btn-block {
 
 .page-link:hover {
   z-index: 2;
-  color: #224abe;
+  color: var(--primary-variant);
   text-decoration: none;
-  background-color: #eaecf4;
-  border-color: #dddfeb;
+  background-color: var(--primary-variant);
+  border-color: var(--primary-variant);
 }
 
 .page-link:focus {
@@ -5716,8 +5722,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 1;
   color: #fff;
-  background-color: #6777EF;
-  border-color: #6777EF;
+  background-color: var(--primary);
+  border-color: var(--primary);
 }
 
 .page-item.disabled .page-link {
@@ -5805,7 +5811,7 @@ a.badge:focus {
 
 .badge-primary {
   color: #fff;
-  background-color: #6777EF;
+  background-color: var(--primary);
 }
 
 a.badge-primary:hover,
@@ -5998,7 +6004,7 @@ a.badge-dark.focus {
 
 .alert-primary {
   color: #293c74;
-  background-color: #6777ef;
+  background-color: var(--primary);
 }
 
 .alert-primary hr {
@@ -6122,7 +6128,7 @@ a.badge-dark.focus {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #6777EF;
+  background-color: var(--primary);
   -webkit-transition: width 0.6s ease;
   transition: width 0.6s ease;
 }
@@ -6227,8 +6233,8 @@ a.badge-dark.focus {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #6777EF;
-  border-color: #6777EF;
+  background-color: var(--primary);
+  border-color: var(--primary);
 }
 
 .list-group-horizontal {
@@ -7469,7 +7475,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #6777EF !important;
+  background-color: var(--primary) !important;
 }
 
 a.bg-primary:hover,
@@ -7606,7 +7612,7 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-  border-color: #6777EF !important;
+  border-color: var(--primary) !important;
 }
 
 .border-secondary {
@@ -11482,12 +11488,12 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #6777EF !important;
+  color: var(--primary) !important;
 }
 
 a.text-primary:hover,
 a.text-primary:focus {
-  color: #224abe !important;
+  color: var(--primary-variant) !important;
 }
 
 .text-secondary {
