--- a/css/admin.css
+++ b/css/admin.css
@@ -144,9 +144,9 @@ a:focus {
 }
 
 .bg-gradient-primary {
-  background-color: #6777ef;
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(10%, #6777ef), to(#303f9f));
-  background-image: linear-gradient(180deg, #6777ef 10%, #303f9f 100%);
+  background-color: var(--primary);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(10%, var(--primary)), to(#303f9f));
+  background-image: linear-gradient(180deg, var(--primary) 10%, #303f9f 100%);
   background-size: cover
 }
 
@@ -292,6 +292,14 @@ a:focus {
   color: #3a3b45 !important
 }
 
+.text-gradient {
+  background: var(--primary);
+  background: linear-gradient(90deg, rgba(2,122,187,1) 0%, rgba(88,198,225,1) 50%, rgba(69,154,165,1) 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 .icon-circle {
   height: 2.5rem;
   width: 2.5rem;
@@ -308,11 +316,11 @@ a:focus {
 }
 
 .border-left-primary {
-  border-left: .25rem solid #3f51b5 !important
+  border-left: .25rem solid var(--primary) !important
 }
 
 .border-bottom-primary {
-  border-bottom: .25rem solid #3f51b5 !important
+  border-bottom: .25rem solid var(--primary) !important
 }
 
 .border-left-secondary {
@@ -513,8 +521,8 @@ a:focus {
 }
 
 .topbar .dropdown-list .dropdown-header {
-  background-color: #3f51b5;
-  border: 1px solid #3f51b5;
+  background-color: var(--primary);
+  border: 1px solid var(--primary);
   padding-top: .75rem;
   padding-bottom: .75rem;
   color: #fff
@@ -581,24 +589,22 @@ a:focus {
 }
 
 .topbar.navbar-light .navbar-nav .nav-item .nav-link {
-  /* color: #fafafa; */
-  color: #6e707e;
+  color: #5a5c69;
   transition: all .3s ease-in-out;
   -webkit-transition: all .3s ease-in-out
 }
 
 .topbar.navbar-light .navbar-nav .nav-item .nav-link:hover {
-  color: #e0e0e0;
+  color: #979797;
   transition: all .3s ease-in-out;
   -webkit-transition: all .3s ease-in-out
 }
 
 .topbar.navbar-light .navbar-nav .nav-item .nav-link:active {
-  color: #858796
+  color: #968595
 }
 
 .bg-navbar {
-  /* background-color: #6777ef */
   background-color: #fff
 }
 
@@ -701,7 +707,7 @@ a:focus {
   text-transform: uppercase;
   font-weight: 800;
   font-size: .65rem;
-  color: #b7b9cc
+  color: #6e707e
 }
 
 .sidebar .nav-item .collapse .collapse-inner .collapse-item,
@@ -709,7 +715,7 @@ a:focus {
   padding: .5rem 1rem;
   margin: 0 .5rem;
   display: block;
-  color: #3a3b45;
+  color: #6e707e;
   text-decoration: none;
   border-radius: .35rem;
   white-space: nowrap
@@ -729,7 +735,7 @@ a:focus {
 
 .sidebar .nav-item .collapse .collapse-inner .collapse-item.active,
 .sidebar .nav-item .collapsing .collapse-inner .collapse-item.active {
-  color: #3a3b45;
+  color: var(--primary);
   font-weight: 800
 }
 
@@ -787,7 +793,7 @@ a:focus {
   text-align: left;
   font-size: .6rem;
   padding: 0 1rem;
-  color: #b7b9cc;
+  color: #6e707e;
   letter-spacing: .030rem
 }
 
@@ -935,7 +941,7 @@ a:focus {
   }
 
   .sidebar.toggled .nav-item.active .nav-link {
-      font-weight: 700
+      font-weight: 700  
   }
 
   .sidebar.toggled .nav-item .nav-link[data-toggle=collapse]::after {
@@ -1018,7 +1024,7 @@ a:focus {
 
   .sidebar.toggled .nav-item .collapse .collapse-inner .collapse-item.active,
   .sidebar.toggled .nav-item .collapsing .collapse-inner .collapse-item.active {
-      color: #3f51b5;
+      color: var(--primary);
       font-weight: 800
   }
 
@@ -1094,7 +1100,7 @@ a:focus {
 
 .sidebar-light .sidebar-brand {
   color: #fafafa;
-  background-color: #4c60da
+  background-color: var(--primary)
 }
 
 .sidebar-light hr.sidebar-divider {
@@ -1102,15 +1108,15 @@ a:focus {
 }
 
 .sidebar-light .sidebar-heading {
-  color: #b7b9cc
+  color: #6e707e
 }
 
 .sidebar-light .nav-item .nav-link {
-  color: #858796
+  color: #6e707e
 }
 
 .sidebar-light .nav-item .nav-link i {
-  color: #9e9e9e
+  color: #6e707e
 }
 
 .sidebar-light .nav-item .nav-link:active,
@@ -1120,6 +1126,14 @@ a:focus {
   background-color: #eee
 }
 
+.sidebar-light .nav-item .nav-link:active,
+.sidebar-light .nav-item .nav-link:focus,
+.sidebar-light .nav-item .nav-link:hover {
+  color: #6e707e;
+  background-color: #eee;
+  font-weight: bold;
+}
+
 .sidebar-light .nav-item .nav-link:active i,
 .sidebar-light .nav-item .nav-link:focus i,
 .sidebar-light .nav-item .nav-link:hover i {
@@ -1127,15 +1141,15 @@ a:focus {
 }
 
 .sidebar-light .nav-item .nav-link[data-toggle=collapse]::after {
-  color: #b7b9cc
+  color: #858796
 }
 
 .sidebar-light .nav-item.active .nav-link {
-  color: #6e707e
+  color: var(--primary)
 }
 
 .sidebar-light .nav-item.active .nav-link i {
-  color: #6e707e
+  color: var(--primary)
 }
 
 .sidebar-light #sidebarToggle {
@@ -1211,8 +1225,7 @@ a:focus {
 }
 
 .btn-action {
-  width: 32px;
-  margin-left:10px;
+  margin-left: 16px;
   background-color: transparent;
   border: none;
 }
@@ -1806,7 +1819,7 @@ a:focus {
   content: attr(data-text);
   position: absolute;
   left: -2px;
-  text-shadow: 1px 0 #3f51b5;
+  text-shadow: 1px 0 var(--primary);
   top: 0;
   color: #5a5c69;
   background: #f8f9fc;
@@ -1914,21 +1927,21 @@ body.sidebar-toggled footer.sticky-footer {
 }
 
 .form-control:focus {
-  border: 1px solid #6777ef
+  border: 1px solid var(--primary)
 }
 
 .input-group-append span {
   -webkit-box-shadow: 0 .125rem .25rem 0 rgba(58, 59, 69, .2) !important;
   box-shadow: 0 .125rem .25rem 0 rgba(58, 59, 69, .2) !important;
   color: #fff;
-  background-color: #3f51b5;
-  border-color: #3f51b5
+  background-color: var(--primary);
+  border-color: var(--primary)
 }
 
 .input-group-prepend span {
   -webkit-box-shadow: 0 .125rem .25rem 0 rgba(58, 59, 69, .2) !important;
   box-shadow: 0 .125rem .25rem 0 rgba(58, 59, 69, .2) !important;
   color: #fff;
-  background-color: #3f51b5;
-  border-color: #3f51b5
+  background-color: var(--primary);
+  border-color: var(--primary)
 }
